--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   </header>
 
   <!-- Hero Section -->
-  <section class="flex flex-col lg:flex-row items-center justify-between p-6 md:p-10 gap-10">
-    <div class="lg:w-1/2 space-y-6 text-center lg:text-left">
+  <section class="flex flex-col-reverse lg:flex-row items-center justify-between p-6 md:p-10 gap-10">
+    <div class="w-full lg:w-1/2 space-y-6 text-center lg:text-left">
       <h2 class="text-3xl md:text-4xl font-bold">Hi, I’m Abdube Dida</h2>
       <p class="text-gray-300">
         I'm a 23-year-old Full Stack Developer with SOC Certification, Certified Ethical Hacker, and student at Kirinyaga University. I specialize in both front-end and back-end development. I recently developed a POS System for AppKings Solutions Ltd and worked with Optimax Group Ltd as a Fiber Networking Specialist.
@@ -32,8 +32,8 @@
         <p>📍 Marsabit, P.O Box 60500, 10</p>
       </div>
     </div>
-    <div class="w-full sm:w-2/3 md:w-1/2 lg:w-1/3">
-      <img src="images/WhatsApp Image 2025-06-23 at 9.59.58 AM.jpeg" alt="Abdube Dida" class="rounded-lg shadow-lg border border-gray-600 w-full h-auto" />
+    <div class="w-full sm:w-2/3 md:w-1/2 lg:w-1/3 flex justify-center">
+      <img src="images/WhatsApp Image 2025-06-23 at 9.59.58 AM.jpeg" alt="Abdube Dida" class="rounded-lg shadow-lg border border-gray-600 w-48 sm:w-60 h-auto max-w-full" />
     </div>
   </section>
 
@@ -140,4 +140,5 @@
 
 </body>
 </html>
+
 
