--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </div>
     </div>
     <div class="w-full sm:w-2/3 md:w-1/2 lg:w-1/3 flex justify-center">
-      <img src="images/Abdube%20dida.jpeg" alt="Abdube Dida" class="rounded-lg shadow-lg border border-gray-600 w-48 sm:w-60 h-auto max-w-full" />
+      <img src="images/abdube.jpeg" alt="Abdube Dida" class="rounded-lg shadow-lg border border-gray-600 w-48 sm:w-60 h-auto max-w-full" />
     </div>
   </section>
 
@@ -140,6 +140,7 @@
 
 </body>
 </html>
+
 
 
 
