--- a/index.html
+++ b/index.html
@@ -6,13 +6,6 @@
   <title>Abdube Dida Portfolio</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
-    @keyframes blink {
-      50% { opacity: 0; }
-    }
-    .animate-blink {
-      animation: blink 1s step-start infinite;
-    }
-
     @keyframes scroll-shine {
       0% { transform: translateX(100%); }
       100% { transform: translateX(-100%); }
@@ -28,7 +21,7 @@
 
   <!-- Navigation -->
   <header class="flex justify-between items-center p-6 border-b border-gray-700">
-    <h1 class="text-xl font-bold animate-blink bg-gradient-to-r from-yellow-400 via-gray-100 to-yellow-300 bg-clip-text text-transparent">
+    <h1 class="text-xl font-bold bg-gradient-to-r from-yellow-400 via-gray-100 to-yellow-300 bg-clip-text text-transparent">
       Abdube Dida
     </h1>
     <nav class="space-x-4">
@@ -162,6 +155,7 @@
 
 </body>
 </html>
+
 
 
 
