--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 <body class="bg-black text-white font-sans">
 
   <!-- Navigation -->
-  <header class="flex justify-between items-center p-6 border-b border-gray-700">
+  <header class="flex flex-col md:flex-row justify-between items-center p-6 border-b border-gray-700 text-center md:text-left">
     <h1 class="text-xl font-bold bg-gradient-to-r from-yellow-400 via-gray-100 to-yellow-300 bg-clip-text text-transparent">
       Abdube Dida
     </h1>
-    <nav class="space-x-4">
+    <nav class="space-x-4 mt-4 md:mt-0">
       <a href="#about" class="hover:text-blue-400">About</a>
       <a href="#services" class="hover:text-blue-400">Services</a>
       <a href="#projects" class="hover:text-blue-400">Projects</a>
@@ -33,9 +33,9 @@
   </header>
 
   <!-- Hero Section -->
-  <section class="flex flex-col lg:flex-row items-center justify-between p-10">
-    <div class="lg:w-1/2 space-y-6">
-      <h2 class="text-4xl font-bold overflow-hidden whitespace-nowrap animate-scroll bg-gradient-to-r from-white via-yellow-300 to-white bg-clip-text text-transparent">
+  <section class="flex flex-col lg:flex-row items-center justify-between p-6 md:p-10 gap-10">
+    <div class="lg:w-1/2 space-y-6 text-center lg:text-left">
+      <h2 class="text-3xl md:text-4xl font-bold overflow-hidden whitespace-nowrap animate-scroll bg-gradient-to-r from-white via-yellow-300 to-white bg-clip-text text-transparent">
         Hi, I’m Abdube Dida
       </h2>
       <p class="text-gray-300">
@@ -47,14 +47,14 @@
         <p>📍 Marsabit, P.O Box 60500, 10</p>
       </div>
     </div>
-    <div class="mt-10 lg:mt-0 lg:w-1/3">
-      <img src="images/abdube.jpeg" alt="Abdube Dida" class="rounded-lg shadow-lg border border-gray-600" />
+    <div class="w-full lg:w-1/3 flex justify-center">
+      <img src="images/abdube.jpeg" alt="Abdube Dida" class="rounded-lg shadow-lg border border-gray-600 w-64 md:w-72" />
     </div>
   </section>
 
   <!-- Services Section -->
-  <section id="services" class="p-10 bg-gray-900">
-    <h3 class="text-2xl font-semibold mb-4">My Services</h3>
+  <section id="services" class="p-6 md:p-10 bg-gray-900">
+    <h3 class="text-2xl font-semibold mb-4 text-center">My Services</h3>
     <div class="grid md:grid-cols-2 gap-6 text-gray-300">
       <div class="bg-gray-800 p-4 rounded-lg">
         <h4 class="font-bold text-white">Web Development</h4>
@@ -76,8 +76,8 @@
   </section>
 
   <!-- Skills Section -->
-  <section id="skills" class="p-10">
-    <h3 class="text-2xl font-semibold mb-4">Skills & Tools</h3>
+  <section id="skills" class="p-6 md:p-10">
+    <h3 class="text-2xl font-semibold mb-4 text-center">Skills & Tools</h3>
     <div class="grid md:grid-cols-2 gap-6 text-gray-300">
       <div>
         <h4 class="font-bold text-white">Programming Languages</h4>
@@ -108,8 +108,8 @@
   </section>
 
   <!-- Projects Section -->
-  <section id="projects" class="p-10">
-    <h3 class="text-2xl font-semibold mb-4">My Work</h3>
+  <section id="projects" class="p-6 md:p-10">
+    <h3 class="text-2xl font-semibold mb-4 text-center">My Work</h3>
     <div class="space-y-4">
       <div class="bg-gray-800 p-4 rounded-lg">
         <h4 class="font-bold text-white">Point of Sales System</h4>
@@ -123,17 +123,17 @@
   </section>
 
   <!-- Blog Section -->
-  <section id="blog" class="p-10 bg-gray-900">
-    <h3 class="text-2xl font-semibold mb-4">Blog & Articles</h3>
+  <section id="blog" class="p-6 md:p-10 bg-gray-900">
+    <h3 class="text-2xl font-semibold mb-4 text-center">Blog & Articles</h3>
     <p class="text-gray-300">
       I write technical blogs and case studies related to development, cybersecurity, and networking. Stay tuned for updates!
     </p>
   </section>
 
   <!-- Contact -->
-  <section id="contact" class="p-10">
-    <h3 class="text-2xl font-semibold mb-4">Contact Me</h3>
-    <form onsubmit="return showAlert()" class="space-y-4 max-w-lg">
+  <section id="contact" class="p-6 md:p-10">
+    <h3 class="text-2xl font-semibold mb-4 text-center">Contact Me</h3>
+    <form onsubmit="return showAlert()" class="space-y-4 max-w-lg mx-auto">
       <input type="email" id="email" placeholder="Enter your email" class="w-full p-2 rounded bg-gray-800 text-white" required>
       <textarea placeholder="Your message" class="w-full p-2 rounded bg-gray-800 text-white" rows="4"></textarea>
       <button type="submit" class="bg-blue-600 px-4 py-2 rounded hover:bg-blue-500">Send Message</button>
@@ -155,6 +155,7 @@
 
 </body>
 </html>
+
 
 
 
