--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 <body class="bg-black text-white font-sans">
 
   <!-- Navigation -->
-  <header class="flex flex-col md:flex-row justify-between items-center p-6 border-b border-gray-700 text-center md:text-left">
+  <header class="flex flex-col md:flex-row justify-between items-center p-4 md:p-6 border-b border-gray-700 text-center md:text-left">
     <h1 class="text-xl font-bold bg-gradient-to-r from-yellow-400 via-gray-100 to-yellow-300 bg-clip-text text-transparent">
       Abdube Dida
     </h1>
-    <nav class="space-x-4 mt-4 md:mt-0">
+    <nav class="space-x-2 md:space-x-4 mt-2 md:mt-0 text-sm md:text-base">
       <a href="#about" class="hover:text-blue-400">About</a>
       <a href="#services" class="hover:text-blue-400">Services</a>
       <a href="#projects" class="hover:text-blue-400">Projects</a>
@@ -33,29 +33,29 @@
   </header>
 
   <!-- Hero Section -->
-  <section class="flex flex-col lg:flex-row items-center justify-between p-6 md:p-10 gap-10">
-    <div class="lg:w-1/2 space-y-6 text-center lg:text-left">
-      <h2 class="text-3xl md:text-4xl font-bold overflow-hidden whitespace-nowrap animate-scroll bg-gradient-to-r from-white via-yellow-300 to-white bg-clip-text text-transparent">
+  <section class="flex flex-col-reverse lg:flex-row items-center justify-between p-4 md:p-10 gap-6 md:gap-10 text-center md:text-left">
+    <div class="lg:w-1/2 space-y-4 md:space-y-6">
+      <h2 class="text-2xl md:text-4xl font-bold animate-scroll bg-gradient-to-r from-white via-yellow-300 to-white bg-clip-text text-transparent">
         Hi, I’m Abdube Dida
       </h2>
-      <p class="text-gray-300">
+      <p class="text-gray-300 text-sm md:text-base">
         I'm a 23-year-old Full Stack Developer with SOC Certification, Certified Ethical Hacker, and student at Kirinyaga University. I specialize in both front-end and back-end development. I recently developed a POS System for AppKings Solutions Ltd and worked with Optimax Group Ltd as a Fiber Networking Specialist.
       </p>
-      <div class="space-y-1 text-sm text-gray-400">
+      <div class="space-y-1 text-xs md:text-sm text-gray-400">
         <p>📧 didaabdube22@gmail.com</p>
         <p>📞 0708609096</p>
         <p>📍 Marsabit, P.O Box 60500, 10</p>
       </div>
     </div>
     <div class="w-full lg:w-1/3 flex justify-center">
-      <img src="images/abdube.jpeg" alt="Abdube Dida" class="rounded-lg shadow-lg border border-gray-600 w-64 md:w-72" />
+      <img src="images/abdube.jpeg" alt="Abdube Dida" class="rounded-lg shadow-lg border border-gray-600 w-48 md:w-64" />
     </div>
   </section>
 
   <!-- Services Section -->
-  <section id="services" class="p-6 md:p-10 bg-gray-900">
-    <h3 class="text-2xl font-semibold mb-4 text-center">My Services</h3>
-    <div class="grid md:grid-cols-2 gap-6 text-gray-300">
+  <section id="services" class="p-4 md:p-10 bg-gray-900">
+    <h3 class="text-xl md:text-2xl font-semibold mb-4 text-center">My Services</h3>
+    <div class="grid md:grid-cols-2 gap-4 md:gap-6 text-gray-300">
       <div class="bg-gray-800 p-4 rounded-lg">
         <h4 class="font-bold text-white">Web Development</h4>
         <p>Full-stack website design and development using modern technologies like HTML, CSS, JavaScript, React, PHP, and MySQL.</p>
@@ -76,9 +76,9 @@
   </section>
 
   <!-- Skills Section -->
-  <section id="skills" class="p-6 md:p-10">
-    <h3 class="text-2xl font-semibold mb-4 text-center">Skills & Tools</h3>
-    <div class="grid md:grid-cols-2 gap-6 text-gray-300">
+  <section id="skills" class="p-4 md:p-10">
+    <h3 class="text-xl md:text-2xl font-semibold mb-4 text-center">Skills & Tools</h3>
+    <div class="grid md:grid-cols-2 gap-4 md:gap-6 text-gray-300">
       <div>
         <h4 class="font-bold text-white">Programming Languages</h4>
         <ul class="list-disc ml-6">
@@ -99,7 +99,7 @@
         <h4 class="font-bold text-white">Cybersecurity Skills</h4>
         <ul class="list-disc ml-6">
           <li>Certified Ethical Hacker (CEH)</li>
-          <li>Kali Linux expert (penetration testing, information gathering, exploitation)</li>
+          <li>Kali Linux expert</li>
           <li>SIEM monitoring & SOC operations</li>
           <li>CompTIA Security+ Certified</li>
         </ul>
@@ -108,8 +108,8 @@
   </section>
 
   <!-- Projects Section -->
-  <section id="projects" class="p-6 md:p-10">
-    <h3 class="text-2xl font-semibold mb-4 text-center">My Work</h3>
+  <section id="projects" class="p-4 md:p-10">
+    <h3 class="text-xl md:text-2xl font-semibold mb-4 text-center">My Work</h3>
     <div class="space-y-4">
       <div class="bg-gray-800 p-4 rounded-lg">
         <h4 class="font-bold text-white">Point of Sales System</h4>
@@ -123,16 +123,16 @@
   </section>
 
   <!-- Blog Section -->
-  <section id="blog" class="p-6 md:p-10 bg-gray-900">
-    <h3 class="text-2xl font-semibold mb-4 text-center">Blog & Articles</h3>
+  <section id="blog" class="p-4 md:p-10 bg-gray-900">
+    <h3 class="text-xl md:text-2xl font-semibold mb-4 text-center">Blog & Articles</h3>
     <p class="text-gray-300">
       I write technical blogs and case studies related to development, cybersecurity, and networking. Stay tuned for updates!
     </p>
   </section>
 
   <!-- Contact -->
-  <section id="contact" class="p-6 md:p-10">
-    <h3 class="text-2xl font-semibold mb-4 text-center">Contact Me</h3>
+  <section id="contact" class="p-4 md:p-10">
+    <h3 class="text-xl md:text-2xl font-semibold mb-4 text-center">Contact Me</h3>
     <form onsubmit="return showAlert()" class="space-y-4 max-w-lg mx-auto">
       <input type="email" id="email" placeholder="Enter your email" class="w-full p-2 rounded bg-gray-800 text-white" required>
       <textarea placeholder="Your message" class="w-full p-2 rounded bg-gray-800 text-white" rows="4"></textarea>
@@ -155,6 +155,7 @@
 
 </body>
 </html>
+
 
 
 
