--- a/index.html
+++ b/index.html
@@ -15,14 +15,21 @@
       display: inline-block;
       white-space: nowrap;
     }
+    @keyframes blink {
+      0%, 100% { opacity: 1; }
+      50% { opacity: 0; }
+    }
+    .blink {
+      animation: blink 1.5s linear infinite;
+    }
   </style>
 </head>
 <body class="bg-black text-white font-sans">
 
   <!-- Navigation -->
   <header class="flex flex-col md:flex-row justify-between items-center p-4 md:p-6 border-b border-gray-700 text-center md:text-left">
-    <h1 class="text-xl font-bold bg-gradient-to-r from-yellow-400 via-gray-100 to-yellow-300 bg-clip-text text-transparent">
-      Abdube Dida
+    <h1 class="text-xl font-bold uppercase blink bg-gradient-to-r from-yellow-400 via-gray-100 to-yellow-300 bg-clip-text text-transparent">
+      ABDUBE DIDA
     </h1>
     <nav class="space-x-2 md:space-x-4 mt-2 md:mt-0 text-sm md:text-base">
       <a href="#about" class="hover:text-blue-400">About</a>
@@ -155,6 +162,7 @@
 
 </body>
 </html>
+
 
 
 
